--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,11 +54,11 @@ android {
                                 onesignal_google_project_number: "1234567890"]
                                 */
 
-        applicationId "jahirfiquitiva.apps.frames.sample"
+        applicationId "com.adraxas.wallx"
         minSdkVersion versions.minSdk
         targetSdkVersion versions.targetSdk
-        versionCode 275
-        versionName '2.7.5'
+        versionCode 1000
+        versionName '1.0.0'
         vectorDrawables.useSupportLibrary = true
         proguardFiles 'proguard-android-optimize.txt', 'proguard-rules.pro'
         consumerProguardFiles 'proguard-android-optimize.txt', 'proguard-rules.pro'
